--- a/economy-gui/pom.xml
+++ b/economy-gui/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>eco-battle-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
